--- a/Visual Studio Projects/Unidad 7/SerranoRuizMauro/CarruselExposicion/CarruselExposicion.html
+++ b/Visual Studio Projects/Unidad 7/SerranoRuizMauro/CarruselExposicion/CarruselExposicion.html
@@ -64,6 +64,8 @@
                             <button type="button" data-bs-target="#exposicion" data-bs-slide-to="2" aria-label="Slide 3"></button>
                             <button type="button" data-bs-target="#exposicion" data-bs-slide-to="3" aria-label="Slide 4"></button>
                             <button type="button" data-bs-target="#exposicion" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                            <button type="button" data-bs-target="#exposicion" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                            <button type="button" data-bs-target="#exposicion" data-bs-slide-to="6" aria-label="Slide 7"></button>
                         </div>
                         <div class="carousel-inner rounded">
                             <div class="carousel-item active">
@@ -80,6 +82,12 @@
                             </div>
                             <div class="carousel-item">
                                 <img src="../CarruselExposicion/Recursos/Imagenes/Coche_5.png" class="d-block w-100" alt="Vehículo 5 de exposición">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../CarruselExposicion/Recursos/Imagenes/Coche_6.png" class="d-block w-100" alt="Vehículo 6 de exposición">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../CarruselExposicion/Recursos/Imagenes/Coche_7.png" class="d-block w-100" alt="Vehículo 7 de exposición">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#exposicion" data-bs-slide="prev">
