--- a/Visual Studio Projects/Unidad 7/SerranoRuizMauro/InscribirseEvento/InscribirseEvento.html
+++ b/Visual Studio Projects/Unidad 7/SerranoRuizMauro/InscribirseEvento/InscribirseEvento.html
@@ -132,11 +132,11 @@
                                 </div>
 
                                 <div class="d-flex d-md-flex justify-content-md-end">
-                                    <button type="reset" class="btn btn-secondary destacar m-1">
+                                    <button type="reset" class="btn btn-secondary destacar m-1" name="limpiar" id="limpiar">
                                         <i class="bi bi-x-circle me-1"></i> Limpiar
                                     </button>
-                                    <button type="submit" class="rojo rounded destacar m-1">
-                                        <i class="bi bi-send-check me-1"></i> Enviar Inscripción
+                                    <button type="submit" class="rojo rounded destacar m-1 text-white" name="enviar" id="enviar" data-bs-toggle="modal" data-bs-target="#inscribirse">
+                                        <i class="bi bi-send-check me-1 text-white"></i> Enviar Inscripción
                                     </button>
                                 </div>
                             </fieldset>
@@ -146,6 +146,24 @@
             </div>
         </div>
     </main>
+
+    <div class="modal fade" id="inscribirse">
+        <div class="modal-dialog">
+            <div class="modal-content bg-dark text-white">
+                <div class="modal-header">
+                    <h4 class="modal-title">Inscripción enviada</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    Gracias por completar el formulario de inscripción. Nos pondremos en contacto contigo pronto para confirmar tu participación en el evento.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
     <footer class="bg-black text-white py-4">
         <div class="container">
